third_party/rust/chromium_crates_io/vendor/cxx-v1/tests/ui/data_enums.stderr
error: enums with data are not supported yet
 --> tests/ui/data_enums.rs:4:9
  |
4 |         Field(u64),
  |         ^^^^^^^^^^
